[package]
name = "todo"
version = "0.1.0"
authors = ["dak-x <2018UCS0068@iitjammu.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.117" , features = ["derive"]}
serde_json = "1.0.59"